//
//  AlertPresenter.swift
//  MovieQuiz
//
//  Created by Надежда Пономарева on 02.10.2024.
import UIKit

final class AlertPresenter {
    weak var delegate: UIViewController?
//    init(delegate: MovieQuizViewController?) {
    init(delegate: UIViewController?) {
        self.delegate = delegate
    }
    func show(quiz result: AlertModel) {
        let alert = UIAlertController(
            title: result.title,
            message: result.message,
            preferredStyle: .alert
        )
        let action = UIAlertAction(
            title: result.buttonText,
            style: .default
        ) { _ in result.completion()
                }
         
        alert.view.accessibilityIdentifier = "Game results"
        alert.addAction(action)
        delegate?.present(alert, animated: true, completion: nil)
    }
}
